# dvoke

./: .gitignore
apps/backend/: pyproject.toml  pyrightconfig.json
apps/backend/app/: main.py
docs/: project.txt
