[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.410",
    "ruff>=0.15.17",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
